# pocqtquick

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  main.cpp  temp.txt
.github/: labeler.yaml  pull_request_template.md  release.yaml
.github/workflows/: auto-labeler.yaml  deploy-dev.yaml  deploy-prod.yaml  deploy-test.yaml  labeler.yaml  pocqtquick-deploy-dev.yaml  pocqtquick-deploy-prod.yaml  pocqtquick-deploy-test.yaml  pocqtquick-github-tag-and-release.yaml  pocqtquick-validate.yaml  pocqtquick-windows-installer-build.yaml  validate.yaml  windows-installer-build.yaml
cmake/: TestUtils.cmake
installer/: windows-setup.iss
installer/config/: config.xml
scripts/: build-app-windows.bat  build-installer-windows.bat  build-windows-app.bat  build-windows-installer.bat  create-windows-app.bat  create-windows-installer.bat
source/: CMakeLists.txt  Main.qml  main.cpp
source/backend/: CMakeLists.txt  counter.cpp  counter.h
source/backend/bridges/: CounterBridge.cpp  CounterBridge.h
source/backend/services/: CounterService.cpp  CounterService.h  LoggerService.cpp
source/ui/: CMakeLists.txt  Main.qml
source/ui/pages/: CounterPage.qml
src/: main.cpp  pocqtquick-qtquickcontrols2.conf  qml.qrc
src/backend/: CMakeLists.txt
src/backend/core/: LoggerService.h  ServiceInitializer.cpp  ServiceInitializer.h  ServiceLocator.h  ServiceProvider.cpp  ServiceProvider.h
src/backend/interfaces/: ICounterService.h
src/backend/services/: CounterService.cpp  CounterService.h
src/backend/viewmodels/: CounterViewModel.cpp  CounterViewModel.h
src/ui/components/: StandardButton.qml
src/ui/pages/: CounterPage.qml
test/: CMakeLists.txt
test/backend/: CMakeLists.txt  counterTest.cpp
test/backend/bridges/: tst_CounterBridge.cpp
test/backend/viewModels/: tst_CounterViewModel.cpp
test/ui/: MainQmlTest.cpp
test/ui/pages/: tst_CounterPage.qml
tests/: CMakeLists.txt
tests/backend/: CMakeLists.txt
tests/backend/core/: tst_ServiceInitializer.cpp  tst_ServiceProvider.cpp
tests/backend/services/: tst_CounterService.cpp
tests/backend/viewmodels/: tst_CounterViewModel.cpp
tests/ui/: CMakeLists.txt  TestSetup.cpp
tests/ui/pages/: tst_CounterPage.qml
