# This CMakeLists.txt file is a placeholder for your unit tests.
# You would use Qt's Test module (QTest) here to write tests
# for your backend classes, like the Counter.

# For example, you would add a test source file like this:
#
# add_executable(tst_counter test_counter.cpp ../source/backend/counter.cpp)
# target_link_libraries(tst_counter PRIVATE Qt::Test)
# add_test(NAME CounterTest COMMAND tst_counter)

message(STATUS "Test directory configured. Add your CTest/QTest tests here.")
